--- a/ai-ml/gke-ray/rayserve/llm/model-composition/ray-service-tpu.yaml
+++ b/ai-ml/gke-ray/rayserve/llm/model-composition/ray-service-tpu.yaml
@@ -16,7 +16,7 @@
 apiVersion: ray.io/v1
 kind: RayService
 metadata:
-  name: model-composition
+  name: vllm-tpu
 spec:
   serveConfigV2: |
     applications:
