--- a/ai-ml/gke-ray/rayserve/llm/model-composition/ray-service-tpu.yaml
+++ b/ai-ml/gke-ray/rayserve/llm/model-composition/ray-service-tpu.yaml
@@ -30,7 +30,9 @@ spec:
         working_dir: "https://github.com/GoogleCloudPlatform/kubernetes-engine-samples/archive/main.zip"
         env_vars:
           ASSIST_MODEL_ID: "meta-llama/Meta-Llama-3-8B-Instruct"
-          SUMMARIZER_MODEL_ID: "mistralai/Mistral-7B-Instruct-v0.3"
+          SUMMARIZER_MODEL_ID: "google/gemma-7b-it"
+          TPU_CHIPS: "16"
+          TPU_HEADS: "2"
   rayClusterConfig:
     headGroupSpec:
       rayStartParams:
