--- a/ai-ml/gke-ray/rayserve/llm/model-composition/ray-service.tpu-v6e-singlehost.yaml
+++ b/ai-ml/gke-ray/rayserve/llm/model-composition/ray-service.tpu-v6e-singlehost.yaml
@@ -29,8 +29,8 @@ spec:
       runtime_env:
         working_dir: "https://github.com/GoogleCloudPlatform/kubernetes-engine-samples/archive/main.zip"
         env_vars:
-          ASSIST_MODEL_ID: "meta-llama/Meta-Llama-3-8B-Instruct"
-          SUMMARIZER_MODEL_ID: "google/gemma-7b-it"
+          ASSIST_MODEL_ID: "$ASSIST_MODEL_ID"
+          SUMMARIZER_MODEL_ID: "$SUMMARIZER_MODEL_ID"
           TPU_CHIPS: "16"
           TPU_HEADS: "2"
   rayClusterConfig:
