--- a/ai-ml/gke-ray/raytrain/pytorch-mnist/ray-cluster.yaml
+++ b/ai-ml/gke-ray/raytrain/pytorch-mnist/ray-cluster.yaml
@@ -38,9 +38,11 @@ spec:
           resources:
             limits:
               cpu: "2"
+              ephemeral-storage: "9Gi"
               memory: "4Gi"
             requests:
               cpu: "2"
+              ephemeral-storage: "9Gi"
               memory: "4Gi"
   workerGroupSpecs:
   - replicas: 4
@@ -56,8 +58,10 @@ spec:
           resources:
             limits:
               cpu: "4"
+              ephemeral-storage: "9Gi"
               memory: "8Gi"
             requests:
               cpu: "4"
+              ephemeral-storage: "9Gi"
               memory: "8Gi"
 # [END gke_ai_ml_gke_ray_raytrain_pytorch_mnist_raycluster]
