--- a/ai-ml/gke-ray/raytrain/pytorch-mnist/ray-job.yaml
+++ b/ai-ml/gke-ray/raytrain/pytorch-mnist/ray-job.yaml
@@ -47,9 +47,11 @@ spec:
               resources:
                 limits:
                   cpu: "2"
+                  ephemeral-storage: "9Gi"
                   memory: "4Gi"
                 requests:
                   cpu: "2"
+                  ephemeral-storage: "9Gi"
                   memory: "4Gi"
     workerGroupSpecs:
       - replicas: 4
@@ -65,8 +67,10 @@ spec:
                 resources:
                   limits:
                     cpu: "4"
+                    ephemeral-storage: "9Gi"
                     memory: "8Gi"
                   requests:
                     cpu: "4"
+                    ephemeral-storage: "9Gi"
                     memory: "8Gi"
 # [END gke_ai_ml_gke_ray_raytrain_pytorch_mnist_rayjob]
