Lower ephem storage request for TPU model composition CRs
Signed-off-by: Ryan O'Leary <ryanaoleary@google.com>

--- a/ai-ml/gke-ray/rayserve/llm/model-composition/ray-service.tpu-v5e-singlehost.yaml
+++ b/ai-ml/gke-ray/rayserve/llm/model-composition/ray-service.tpu-v5e-singlehost.yaml
@@ -117,12 +117,12 @@ spec:
               limits:
                 cpu: "100"
                 google.com/tpu: "8"
-                ephemeral-storage: 50Gi
+                ephemeral-storage: 40G
                 memory: 100G
               requests:
                 cpu: "100"
                 google.com/tpu: "8"
-                ephemeral-storage: 50Gi
+                ephemeral-storage: 40G
                 memory: 100G
             volumeMounts:
             - name: gcs-fuse-csi-ephemeral
